# health-monitor-app

./: .gitignore  CMakeLists.txt  HealthMonitor.pro  README.md  run_web_app.sh  simple_test.cpp
backend/: server  webserver.cpp
frontend/: index.html
include/: DatabaseManager.h
scr/: DatabaseManager.cpp
src/: health_console.cpp  main.cpp
